force-app/main/default/objects/RecordCloneSettings__mdt/fields/ChildRecordNameType__c.field-meta.xml
<CustomField>
    <fullName>ChildRecordNameType__c</fullName>
    <label>Child record name type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[Child record name]</fullName>
                <default>true</default>
                <label>[Child record name]</label>
            </value>
            <value>
                <fullName>Cloned - [Child record name]</fullName>
            </value>
            <value>
                <fullName>Cloned - [Child record name] - [YYYY/mm/dd HH:ii]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>