force-app/main/default/objects/RecordCloneSettings__mdt/fields/ChildRelationshipNames__c.field-meta.xml
<CustomField>
    <fullName>ChildRelationshipNames__c</fullName>
    <description>child relationship names. comma separated</description>
    <label>Child Relationship Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>