force-app/main/default/objects/RecordCloneSettings__mdt/fields/ExcludedFieldNames__c.field-meta.xml
<CustomField>
    <fullName>ExcludedFieldNames__c</fullName>
    <description>field names to be excluded. comma separated</description>
    <label>Excluded field names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>